# sigils-fastapi

./: README.rst  pyproject.toml  requirements.txt
sigils_fastapi/: __init__.py  __main__.py  redirect.py
