[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sigils-fastapi"
version = "0.1.0"
authors = [
    {name = "Rafael Jesús Guillén Osorio", email = "arthexis@gmail.com"},
]
description = "Example [[SIGILS]] server with FastAPI."
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["utils", "sigils", "string", "text", "magic", "context"]
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'sigils>=0.2.1',
    'FastAPI>=0.92.0',
]

[project.urls]
Source = "https://github.com/arthexis/sigils"
Bug-Tracker = "https://github.com/arthexis/sigils/issues"


[project.optional-dependencies]
dev = [
    "pytest", 
]

